--- a/backend/docker/nginx/nginx.conf
+++ b/backend/docker/nginx/nginx.conf
@@ -5,7 +5,7 @@ server {
 
     access_log /var/log/nginx/application.access.log;
 
-    root /backend/var/www/html/public;
+    root /var/www/html/public;
     index index.php;
 
     # Tenta acessar o arquivo diretamente ou retorna para index.php
