--- a/backend/docker/php-fpm/Dockerfile
+++ b/backend/docker/php-fpm/Dockerfile
@@ -1,6 +1,6 @@
 FROM phpdockerio/php:8.0-fpm
 
-WORKDIR "/app/backend"
+WORKDIR "/var/www/html"
 
 RUN apt-get update; \
     apt-get -y --no-install-recommends install \
