--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,13 @@
-FROM node:12-alpine
-WORKDIR /app/frontend
+FROM node:17-alpine
+WORKDIR "/app/frontend"
 
-COPY . .
 # necessario descomentar quando clonar projeto do react
+# COPY package.json .
+
 # RUN npm install
+
+# COPY . .
 
 EXPOSE 3000
 # mesmo caso mencionado acima
-# CMD npm start
+# CMD ["npm", "start"]
