--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,26 @@
-version: '3.1'
+version: '3.3'
 
 services:
+    frontend:
+        build:
+            context: ./frontend
+            dockerfile: Dockerfile
+        container_name: 'react-frontend'
+        tty: true
+        ports:
+            - 3000:3000   
+        working_dir: /app
+        volumes:
+            - ./frontend:/app
+        networks:
+            - app-network
 
     redis:
         image: 'redis:alpine'
         container_name: 'redis'
+        networks:
+            - app-network
+            - db
 
     mysql:
         image: 'mysql:5.7'
@@ -20,6 +36,9 @@ services:
             - MYSQL_PASSWORD=delivery
         ports:
             - '8083:3306'
+        networks:
+            - app-network
+            - db
 
     webserver:
         image: 'nginx:alpine'
@@ -29,7 +48,10 @@ services:
             - './backend:/var/www/html'
             - './backend/docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf'
         ports:
-            - '8080:80'
+            - '8000:8000'
+        networks:
+            - app-network
+            - db
 
     php-fpm:
         build: backend/docker/php-fpm
@@ -38,6 +60,9 @@ services:
         volumes:
             - './backend:/var/www/html'
             - './backend/docker/php-fpm/php-ini-overrides.ini:/etc/php/8.0/fpm/conf.d/99-overrides.ini'
+        networks:
+            - app-network
+            - db
 
     phpmyadmin:
         image: phpmyadmin:latest
@@ -46,17 +71,12 @@ services:
             - 8086:80
         environment:
             - PMA_ARBITRARY=1
+        networks:
+            - db
 
-    frontend:
-        build:
-            context: ./frontend
-            dockerfile: Dockerfile
-        container_name: 'react-frontend'
-        tty: true
-        ports:
-            - 3000:3000
-        working_dir: /app/frontend
-        volumes:
-            - .:/app/frontend
+networks:
+    app-network:
+        driver: bridge
+    db:
 
 #Developed by vinicius_ponce
