--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,4 +1,4 @@
 LOCAHOST_ACCESS=localhost
 
-#Insert your ip address machine
-LOCAL_SERVER_ACCESS_ROUTING=192.168.1.5
+#Insira o ipv4 abaixo
+LOCAL_SERVER_ACCESS_ROUTING=
