--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ backend/composer.lock
 backend/package-lock.json
 backend/public/mix-manifest.json
 backend/public/css/app.css
+backend/storage/certs/*
+portainer-data/portainer.db
